--- a/gb/24/12/11/n14388581.md
+++ b/gb/24/12/11/n14388581.md
@@ -6,13 +6,13 @@
 <h6>法轮功2024年3月3日在纽约布碌崙八大道大游行，声势浩大。图为第二方阵队伍——停止迫害法轮功。（戴兵／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2024年12月11日讯】12月6日，大纪元发表独家报道《二十大前习亲定攻击法轮功新战略》。旅澳法学家袁红冰教授披露，中共二十大前，中共党魁习近平亲自确定了在海外攻击法轮功的新战略。其中包括对法轮功开展“法律战”。</p>
+	<p>【大纪元2024年12月11日讯】12月6日，大纪元发表独家报导《二十大前习亲定攻击法轮功新战略》。旅澳法学家袁红冰教授披露，中共二十大前，中共党魁习近平亲自确定了在海外攻击法轮功的新战略。其中包括对法轮功开展“法律战”。</p>
 <p>我认为，这不是什么“新战略”。从1999年7月20日江泽民发动迫害法轮功之后，中共就一直在对法轮功搞“法律战”。但是，这个“法律战”，与运用法律维护社会的公平正义毫无关系，不过是打着法律的名义，干着反法治的勾当。</p>
 <p>这里，我就把中共对法轮功搞“法律战”的是非做一个分辨。</p>
 <h2><strong>中共反法治的“法律战”</strong></h2>
-<p>1999年7.20以来，中共对法轮功搞“法律战”之反法治主要体现在以下六个方面：</p>
+<p>1999年7?20以来，中共对法轮功搞“法律战”之反法治主要体现在以下六个方面：</p>
 <h3><strong>第一，没有法律依据。</strong></h3>
-<p>中共对法轮功搞“法律战“，都是声称“法轮功是X教”而对法轮功学员采取强制措施的。</p>
+<p>中共对法轮功搞“法律战”，都是声称“法轮功是X教”而对法轮功学员采取强制措施的。</p>
 <p>“法无明文规定，不为罪；法无明文规定，不违法”，这是世界各国刑法中最普遍、最重要的“罪刑法定”原则。</p>
 <p>中共刑法第三条规定：“【罪刑法定】法律明文规定为犯罪行为的，依照法律定罪处刑；法律没有明文规定为犯罪行为的，不得定罪处刑。”</p>
 <p>翻遍中共的所有法律，没有规定“法轮功是X教”的。</p>
@@ -26,21 +26,21 @@
 <p>中共宪法第37条规定：“公民的人身自由不受侵犯”，“禁止非法拘禁和以其他方法非法剥夺或者限制公民的人身自由”。</p>
 <p>法轮功学员被抓进洗脑班关押，违反了宪法第37条的明文规定。也就是说，在中国，无论什么人，以什么借口，把法轮功学员抓进洗脑班关押，限制、剥夺他们的人身自由，都是非法的。对于国家公职人员来说，这是知法犯法，执法犯法。</p>
 <p>至于对法轮功学员强制洗脑、转化，更是荒谬至极的违法行为。法轮功学员严格按“真、善、忍”做好人，你要他往哪里转？从“真、善、忍”转化为“假、恶、斗”？</p>
-<p>从1999年7.20至2024年的今天，中共在全国各地设立了无数洗脑班，浪费了大量人力、物力、财力，对法轮功学员强制洗脑、转化，强迫他们听、看中共宣传机器制造的谎言，强迫他们说假话，非讲假话不可，不讲假话不行。</p>
+<p>从1999年7?20至2024年的今天，中共在全国各地设立了无数洗脑班，浪费了大量人力、物力、财力，对法轮功学员强制洗脑、转化，强迫他们听、看中共宣传机器制造的谎言，强迫他们说假话，非讲假话不可，不讲假话不行。</p>
 <p>这不是“法律战”。这是中共向宪法宣战，向人的良知宣战。</p>
 <h3><strong>第三，劳动教养非法。</strong></h3>
 <p>中共对法轮功搞“法律战”的第二种重要方式，是劳动教养。</p>
-<p>1999年7.20迫害发生后，全国有成千上万，几十万，甚至可能有上百万法轮功学员，被非法关押在劳教所迫害。</p>
+<p>1999年7?20迫害发生后，全国有成千上万，几十万，甚至可能有上百万法轮功学员，被非法关押在劳教所迫害。</p>
 <p>遍布全国各地的劳教所，成为限制、剥夺法轮功学员人身自由，并对他们强制洗脑、转化的地方。劳教的时间，短则一年，长则三年。</p>
 <p>根据法律规定，只能对犯罪嫌疑人采取限制或剥夺人身自由的强制措施，这种强制措施必须严格依据《刑事诉讼法》的规定进行，限制或剥夺公民人身自由1年至3年，应由法院依法判决之后，才能施行。</p>
-<p>未经法院审判，任何组织或个人无权非法限制或剥夺公民的人身自由1-3年。</p>
-<p>中共未经法院审判，而由设在公安机关内的劳教委随意判决法轮功学员1-3年劳教。这是严重违反宪法第37条的行为。</p>
+<p>未经法院审判，任何组织或个人无权非法限制或剥夺公民的人身自由1—3年。</p>
+<p>中共未经法院审判，而由设在公安机关内的劳教委随意判决法轮功学员1—3年劳教。这是严重违反宪法第37条的行为。</p>
 <p>正因为中共的劳教制度本身是违宪的，加上劳教所发生了许多骇人听闻的迫害在押人员事件，在许多法学家、律师、法律工作者，以及其他各界人士长时间的强烈呼吁下，2013年1月7日，中共被迫废除劳教制度。</p>
 <h3><strong>第四，滥用刑法第300条判刑非法。</strong></h3>
 <p>中共对法轮功搞“法律战”的第三种重要方式，是滥用刑法第300条对法轮功学员判刑。</p>
-<p>从1999年7.20至2024年的今天，中共法院都是滥用刑法第300条，给法轮功学员扣上“利用邪教组织破坏法律实施罪”的罪名。其错有二：</p>
+<p>从1999年7?20至2024年的今天，中共法院都是滥用刑法第300条，给法轮功学员扣上“利用邪教组织破坏法律实施罪”的罪名。其错有二：</p>
 <p>（1）法轮功不是邪教。</p>
-<p>法轮功，又称法轮大法，法轮佛法，是佛家上乘修炼大法，以宇宙根本特性“真、善、忍”为指导，有五套优美舒缓的功法——四套动功，一套静功，真修法轮功者，可收袪病健身、净化心灵之奇效。</p>
+<p>法轮功，又称法轮大法，法轮佛法，是佛家上乘修炼大法，以宇宙根本特性“真、善、忍”为指导，有五套优美舒缓的功法——四套动功、一套静功，真修法轮功者，可收袪病健身、净化心灵之奇效。</p>
 <p>全世界法轮功真修者从亲身实践中体会到：法轮大法于国于民有百利而无一害。</p>
 <p>说“法轮功是X教”，是迫害法轮功的元凶江泽民1999年10月25日接受法国《费加罗报》采访时信口胡说八道的。江的话不是法律。如上所述，翻遍中共的所有法律，没有说“法轮功是X教”的。</p>
 <p>（2）法轮功学员没有破坏任何一条法律实施。</p>
@@ -85,36 +85,34 @@
 <p>接下来，必有一场上天对中共恶人的大淘汰。</p>
 <p>执迷不悟、坚持作恶者，最终将害了自己，害了家人，害了子孙。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
-	
+<p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379344.md#1">王友群：习近平声名一落千丈的九大原因</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/30/n14382101.md#1">王友群：习亲信苗华被抓 大变局已经到来？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385486.md#1">王友群：习近平“政治建军”的两大恶果</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387875.md#1">王友群：中共的“新战略”只会加速其灭亡</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362031.md#1">【古道人生】老翁拾金不昧 结果救了自己的儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362226.md#1">【晚间新闻】阿萨德出逃俄罗斯 普京给政治庇护</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389264.md#1">【马克时空】叙利亚一夕变天 以色列占领缓冲区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388534.md#1">【唐青看时事】阿萨德垮台 习兔死狐悲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388165.md#1">天文学家发现更多奇怪天体——暗彗星</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387906.md#1">突破性发现 科学家首次界定单个光子的形状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387737.md#1">韦伯望远镜证实宇宙正在以超预期速度膨胀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387474.md#1">春风称周杰伦是儿时偶像 网友查他真实年龄吓到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387165.md#1">真人《白雪公主》预告片留言热烈 倒赞数惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388478.md#1">泰勒丝“时代”巡演落幕 工作人员奖金惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388542.md#1">《鱿鱼游戏2》破例 未播入围金球奖最佳剧集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387748.md#1">曾为对台统战样板 饶舌歌手陈柏源盼推翻中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387333.md#1">塑胶微粒无所不在 3成来自这个被忽略的来源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386043.md#1">咖啡渣别急着丢 吸湿除臭超有效！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385098.md#1">一分钟护眼操精华版 改善干眼症白内障</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386058.md#1">5种运动心脏最喜欢 搭配1水果延年益寿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380735.md#1">地中海饮食控血糖 可减缓大脑老化速度50%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/11/n14388581.htm">王友群：中共所谓的“法律战”最终害了谁？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388581.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
