--- a/gb/24/12/9/n14387321.md
+++ b/gb/24/12/9/n14387321.md
@@ -18,41 +18,46 @@
 <p>“法轮功做了很大努力，有很大成就。一个最基本的现实就是，共产主义运动在全球早就是强弩之末，就是在1989年到1991年这两三年之间，整个共产主义体系都已经崩溃，所以现在共产党的所作所为只是垂死挣扎而已。”</p>
 <p>今年也是揭露中共本质的大纪元系列社论《<ahref="https://github.com/1992513/djy/blob/master/gb/4/12/13/n746020.md#1">九评共产党</a>》发表20周年，冯崇义表示，20年间，这个世界发生了天翻地覆的变化。</p>
 <p>“我本身学历史。因为原来共产党是由谎言治国的，所以它的整个历史叙述全部是一个谎言。我非常高兴看见法轮功带领整个世界把这个被颠倒的历史，把它正过来。现在全世界都在觉醒。”</p>
-<figure id="attachment_14387450" aria-describedby="caption-attachment-14387450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14387450-36bb82a3e2c965e7ca94fec77ce8e31b.jpeg"><img decoding="async" class="size-large wp-image-14387450" src="https://i.epochtimes.com/assets/uploads/2024/12/id14387450-36bb82a3e2c965e7ca94fec77ce8e31b-600x277.jpeg" alt="" width="600" b="277" /></a><figcaption id="caption-attachment-14387450" class="wp-caption-text">2024年12月6日下午，在悉尼市政厅前的广场上，中国问题专家冯崇义副教授在《九评共产党》发表二十周年集会上发言。（骆亚／大纪元）</figcaption></figure>
+<figure id="attachment_14387450" aria-describedby="caption-attachment-14387450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14387450-36bb82a3e2c965e7ca94fec77ce8e31b.jpeg"><img decoding="async" class="size-large wp-image-14387450" src="https://i.epochtimes.com/assets/uploads/2024/12/id14387450-36bb82a3e2c965e7ca94fec77ce8e31b-600x277.jpeg" alt="" width="600" b="277" /></a><figcaption id="caption-attachment-14387450" class="wp-caption-text">2024年12月7日下午，在悉尼市政厅前的广场上，中国问题专家冯崇义副教授在《九评共产党》发表二十周年集会上发言。（骆亚／大纪元）</figcaption></figure>
 <p>就《九评》带动的“三退”（退出中共党团队组织）大潮，冯崇义说，其实共产党早就是一个僵尸、一具骷髅，早就没有灵魂。现在要看人有没有勇气去捅破最后那一层窗户纸。所以做“三退”，本身就是让人们有勇气来正式地做一个宣告，做一个放弃。</p>
 <p>“在世界觉醒之后，还希望大家勇敢行动。”他理解法轮功所说的“天灭中共”，就是上天或者上帝意旨已定，但要通过人的手来灭中共，所以下面是需要很多行动。</p>
 <p>冯崇义举例在澳大利亚，从2017年提出一项改革措施，并于2018年6月国会获得通过的《反外国干预法》，这是澳洲政府主要对付共产党的法律，但是这些法律执行的力度不够。现在大家觉醒之后，还要有更大的勇气，做更大的努力。</p>
 <p>中共政权近年加大力度维稳，除了在国际上对别国动辄以利益相要挟、威胁，在海外扩大针对海外华人的跨国镇压计划，在国内又新建一个中央社会工作部，监控触角伸向全国。</p>
 <p>冯崇义表示，中共现在是末日疯狂，不要被他们这种张牙舞爪、外强中干所迷惑。“他们早就末日来临，整个自由民主世界，现在都已经看到共产党的末日，大家都越来越勇敢起来，跟中共脱钩、跟中共做切割。”</p>
 <p>责任编辑：高静#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/24/n13980500.md#1">网传中共政法委操控方斌案秘件 陈一新签字</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302964.md#1">【晚间新闻】美重磅报告揭中共跨国镇压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309933.md#1">觅真：曝光国安部长陈一新迫害法轮功的罪行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/30/n14381998.md#1">追查国际调查中共国安部长陈一新犯罪事实</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383823.md#1">《我的爱，我的新娘》：笑中带泪的婚姻生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/2/n14383095.md#1">【未解之谜】南极的秘密 上古文明的真相？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？奇人张四目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387671.md#1">【军事情报局】美日合作助台 海马斯部署日菲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386576.md#1">【时事金扫描】反抗军攻叙首都 川普泄俄军机密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386798.md#1">援乌韩国士兵劝援俄朝鲜“兄弟”投降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1">56岁伊能静大方认老 自拍戴老花镜补妆获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386568.md#1">台网红发纪录片揭中共统战 逾百万人观看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386564.md#1">揭中共统战黑幕 台湾歌手陈柏源发不自杀声明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387165.md#1">真人《白雪公主》预告片留言热烈 倒赞数惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387474.md#1">春风称周杰伦是儿时偶像 网友查他真实年龄吓到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386577.md#1">迈克尔·杰克逊爱女宣布订婚 男方身份曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387333.md#1">塑胶微粒无所不在 3成来自这个被忽略的来源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386747.md#1">【旅行趣】风车下的惊喜：爱上台湾王功的理由</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386043.md#1">咖啡渣别急着丢 吸湿除臭超有效！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386019.md#1">无论是否做运动 久坐都会增加患心脏病的风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385098.md#1">一分钟护眼操精华版 改善干眼症白内障</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/9/n14387321.htm">冯崇义：西媒助中共打压法轮功是世界耻辱</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387321.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
